--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="top">
             <div class="titulo"><h1>OVNI:     Lenguaje tipo DSL</h1></div>
             <div class="info">
-                <p>
+                <p class="about">
                 Lenguaje tipo DSL inspirado en LOGO. Cuenta con analizador léxico usando regex y un parser para analizar la sintaxis implementado
-                con descenso recursivo.
+                con descenso recursivo. Se recomienda abrir la consola para ver mensajes del parser.
                 </p>
             <p>Creado por: David Alejandro González Ibarra A01633817</p>
             </div>
@@ -26,23 +26,23 @@
                     <h2 class="instruccionesParrafo">Reconoce los siguientes comandos para pintar la pantalla:</h2>
                     <li class="Ejemplos">
                         <ul>Avanzar (1-50)
-                            <p>Permite mover el ovni hacia arriba</p>
+                            <p>Permite mover el ovni hacia arriba. Importante -> ()</p>
                         </ul>
                         
                         <ul>Retroceder (1-50)
-                            <p>Permite mover el ovni hacia abajo</p>
+                            <p>Permite mover el ovni hacia abajo. Importante -> ()</p>
                         </ul>
                         <ul>Vuelta derecha (1-50)
-                            <p>Permite mover a la derecha en angulo de 90 grados</p>
+                            <p>Permite mover a la derecha en angulo de 90 grados. Importante -> ()</p>
                         </ul>
                         <ul>Vuelta izquierda (1-50)
-                            <p>Permite mover a la izquierda en angulo de 90 grados</p>
+                            <p>Permite mover a la izquierda en angulo de 90 grados. Importante -> ()</p>
                         </ul>
                         <ul>Pintura amarillo/rojo/verde/azul
-                            <p>Permite cambiar la pintura de toda la linea que dibuja</p>
+                            <p>Permite cambiar la pintura de toda la linea que dibuja para el siguiente comando</p>
                         </ul>
                         <ul>Centrar Ovni
-                            <p>Permite centrar el ovni y limpiar los dibujos</p>
+                            <p>Permite centrar el ovni y limpiar los dibujos.</p>
                         </ul>
                         <ul>Para repetir un comando se ponde dentro del paréntesis</ul>
                         <ul>Ejemplo: Avanzar (1-50, repetir #)</ul>
